--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.2",
+    "@react-google-maps/api": "^2.19.2",
     "next": "14.0.4",
+    "polyline": "^0.2.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.54.10",
     "@types/node": "20.10.4",
     "@types/react": "18.2.45",
     "autoprefixer": "^10.0.1",
