--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@googlemaps/js-api-loader": "^1.16.2",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@react-google-maps/api": "^2.19.2",
+    "@vercel/speed-insights": "^1.0.2",
     "next": "14.0.4",
     "polyline": "^0.2.0",
     "react": "^18",
